--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
-  <title>Categorized Grocery List</title>
+  <title>Grocery Cart</title>
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="jumbotron rounded-0 shadow">
-      <h1 class="display-4">Grocery List</h1>
+      <h1 class="display-4">Grocery Cart</h1>
       <p class="lead">Using device local storage and AWS</p>
     </div>
 
@@ -21,7 +22,7 @@
     </form>
 
     <div class="card rounded-0 shadow">
-      <div id="listName">Local Storage's List</div>
+      <div id="listName">List on Device</div>
       <div id="groceryLists">
         <div class="row">
           <div class="col-sm card rounded-0 innerCard shadow bg-warning-dark m-2">
@@ -46,17 +47,21 @@
 
       <div id="decisionButtons" class="row">
         <div class="col" id="downloadDiv">
-          <input id="userNameDownload" placeholder="Enter list to retrieve"><br><button id="buttonDownload" class="btn btn-success rounded-0">&#11015; Retrieve List</button>
+          <input id="userNameDownload" placeholder="Enter name of list"><br><button id="buttonDownload"
+            class="btn btn-success rounded-0">&#11015; Retrieve from Cloud</button>
         </div>
         <div class="col" id="clearDiv">
-          <br><button id="clearList" class="btn btn-danger rounded-0">Clear List</button>
+          <button id="clearCrossed" class="btn btn-warning rounded-0">Clear Completed</button>
+          <button id="clearList" class="btn btn-danger rounded-0">Clear List</button>
         </div>
         <div class="col" id="uploadDiv">
-          <input id="userNameUpload" placeholder="Enter name for list"><br><button id="buttonUpload" class="btn btn-success rounded-0">&#11014; Save List</button>
+          <input id="userNameUpload" placeholder="Enter name for list"><br><button id="buttonUpload"
+            class="btn btn-success rounded-0">&#11014; Save to Cloud</button>
         </div>
       </div>
       <div id="statusText"></div>
     </div>
   </div>
 </body>
+
 </html>
